moved text below logo

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <title>Rebekah Eloise Miller</title>
   </head>
   <body>
-    <header>
-      <div class="header" id="headerimg"><img src="RM.png" /></div>
-    </header>
-    <div class="body" id="bodydiv">
-      <main>
-        <h1>Rebekah Eloise Miller</h1>
-        <section class="section1">
-          <h2>Full-Stack Web Developer</h2>
-        </section>
-      </main>
-    </div>
+    <main>
+      <img class="logo" src="RM.png" />
+
+      <h1>Rebekah Eloise Miller</h1>
+      <section class="section1">
+        <h2>Full-Stack Web Developer</h2>
+      </section>
+    </main>
   </body>
 </html>
