font, layout, and wording

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Secular+One:400"
+    />
     <title>Rebekah Eloise Miller</title>
   </head>
   <body>
     <main>
-      <img class="logo" src="RM.png" />
+      <!--<img class="logo" src="RM.png" />-->
+<h1> &ltRM&gt </h1>
+<h6>Web Development</h6>
+      <h2>Rebekah Miller</h2
+      
 
-      <h1>Rebekah Eloise Miller</h1>
       <section class="section1">
         <h2>Full-Stack Web Developer</h2>
       </section>
