--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Secular+One:400"
     />
-    <title>Rebekah Eloise Miller</title>
+    <title>Rebekah Miller</title>
   </head>
   <body>
     <main>
       <!--<img class="logo" src="RM.png" />-->
-<h1> &ltRM&gt </h1>
-<h6>Web Development</h6>
+      <h1 class="logo1" id="RM">&ltRM&gt</h1>
+      <p class="logo2" id="WD">Web Development</p>
+      <!--<h6>Web Development</h6>-->
+      <hr />
       <h2>Rebekah Miller</h2
       
 
